log/build_2025-05-25_15-45-43/my_robot_pkg/stdout_stderr.log
running egg_info
writing ../../../build/my_robot_pkg/my_robot_pkg.egg-info/PKG-INFO
writing dependency_links to ../../../build/my_robot_pkg/my_robot_pkg.egg-info/dependency_links.txt
writing entry points to ../../../build/my_robot_pkg/my_robot_pkg.egg-info/entry_points.txt
writing requirements to ../../../build/my_robot_pkg/my_robot_pkg.egg-info/requires.txt
writing top-level names to ../../../build/my_robot_pkg/my_robot_pkg.egg-info/top_level.txt
reading manifest file '../../../build/my_robot_pkg/my_robot_pkg.egg-info/SOURCES.txt'
writing manifest file '../../../build/my_robot_pkg/my_robot_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying my_robot_pkg/arm_move.py -> /home/futill/targer_ws/build/my_robot_pkg/build/lib/my_robot_pkg
running install
running install_lib
copying /home/futill/targer_ws/build/my_robot_pkg/build/lib/my_robot_pkg/arm_move.py -> /home/futill/targer_ws/install/my_robot_pkg/lib/python3.10/site-packages/my_robot_pkg
byte-compiling /home/futill/targer_ws/install/my_robot_pkg/lib/python3.10/site-packages/my_robot_pkg/arm_move.py to arm_move.cpython-310.pyc
  File "/home/futill/targer_ws/install/my_robot_pkg/lib/python3.10/site-packages/my_robot_pkg/arm_move.py", line 99
    elif action[0] == 'chess':
    ^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/futill/targer_ws/install/my_robot_pkg/lib/python3.10/site-packages/my_robot_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../../build/my_robot_pkg/my_robot_pkg.egg-info to /home/futill/targer_ws/install/my_robot_pkg/lib/python3.10/site-packages/my_robot_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing arm_move script to /home/futill/targer_ws/install/my_robot_pkg/lib/my_robot_pkg
Installing chess_vision_node script to /home/futill/targer_ws/install/my_robot_pkg/lib/my_robot_pkg
Installing gui script to /home/futill/targer_ws/install/my_robot_pkg/lib/my_robot_pkg
writing list of installed files to '/home/futill/targer_ws/build/my_robot_pkg/install.log'
